# liaison

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MVP.md  Makefile  POC.md  PROJET.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
docs/: couche-01-orchestrateur.md  couche-02-connecteurs.md  couche-03-gouvernance.md  couche-04-gateway-observabilite.md  couche-05-mcp.md  couche-06-tests.md  deployment.md  dev-setup.md  operations.md  rgpd.md  senior-best-practices.md
docs/adr/: 0001-mcp-comme-couche-d-integration.md  0002-text-to-sql-gouverne.md  0003-routage-regle-base-extensible-llm.md
scripts/: seed.sql
src/liaison/: __init__.py  api.py  config.py  dependencies.py  entities.py  gateway.py  governance.py  logging.py  mcp.py  middleware.py  observability.py  orchestrator.py  services.py
src/liaison/adapters/inbound/http/: api.py  dependencies.py  middleware.py
src/liaison/adapters/inbound/mcp/: registry.py
src/liaison/adapters/outbound/erp/: http_gateway.py
src/liaison/adapters/outbound/llm/: http_provider.py  local_provider.py
src/liaison/adapters/outbound/retriever/: in_memory.py  qdrant.py
src/liaison/adapters/outbound/sql/: sqlalchemy_executor.py
src/liaison/application/: api_service.py  docs_service.py  llm_gateway.py  orchestrator.py  sql_service.py
src/liaison/connectors/: __init__.py  api.py  docs.py  sql.py
src/liaison/demo/: mock_erp.py
src/liaison/domain/: audit.py  governance.py  idempotency.py  models.py  pii.py  rbac.py  routing.py  sql_policy.py
src/liaison/platform/: config.py  logging.py  observability.py
src/liaison/ports/: erp_gateway.py  llm.py  retriever.py  sql_executor.py
tests/: conftest.py  test_api.py  test_api_connector.py  test_docs_connector.py  test_entities.py  test_gateway.py  test_governance.py  test_http_provider.py  test_mcp.py  test_orchestrator.py  test_services.py  test_sql_connector.py
tests/adapters/inbound/http/: test_api.py
tests/adapters/inbound/mcp/: test_registry.py
tests/adapters/outbound/erp/: test_http_erp_gateway.py
tests/adapters/outbound/llm/: test_http_provider.py
tests/adapters/outbound/retriever/: test_in_memory.py
tests/adapters/outbound/sql/: test_sqlalchemy_executor.py
tests/application/: test_api_service.py  test_docs_service.py  test_llm_gateway.py  test_orchestrator.py  test_sql_service.py
tests/domain/: test_entities.py  test_governance.py  test_models.py  test_routing.py  test_sql_policy.py
