[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liaison"
version = "0.1.0"
description = "Hub d'integration GenAI pour systemes d'information existants (SQL, ERP/CRM, GED) via orchestration multi-agent et MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Seydina Bane" }]
keywords = ["genai", "llm", "rag", "mcp", "text-to-sql", "multi-agent", "fastapi", "integration"]

dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.18.0"]
dev = [
    "liaison[qdrant]",
    "ruff>=0.15.18",
    "mypy>=1.13",
    "pre-commit>=4.6.0",
    "detect-secrets>=1.5",
    "pip-audit>=2.10.1",
]
test = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.4.0",
    "anyio>=4.6",
]

[project.urls]
Repository = "https://github.com/SeydinaBANE/liaison"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "ARG", "PTH"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --cov=src/liaison --cov-report=term-missing"
markers = [
    "integration: tests d'integration necessitant des services externes",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
